fix(task-1): adjust the shape of the text wrap

--- a/01/style.css
+++ b/01/style.css
@@ -14,6 +14,7 @@
 
 .content::before {
     float: left;
+    shape-outside: polygon(0 0, 300px 0, 0 300px);
     display: block;
     content: '';
     height: 0;
